# nezamq

./: Cargo.toml  Makefile  README.md  justfile
config/: log4rs.yaml  placement-center.toml
docs/: raft.doc
scripts/: integration-testing.sh
src/cmd/: Cargo.toml
src/cmd/src/placement-center/: server.rs
src/common/base/: Cargo.toml
src/common/base/src/: errors.rs  http_response.rs  lib.rs  tools.rs
src/common/base/src/config/: common.rs  default_placement_center.rs  mod.rs  placement_center.rs
src/common/base/src/error/: common.rs  mod.rs
src/common/base/src/log/: placement_center.rs
src/grpc-clients/: Cargo.toml
src/grpc-clients/src/: lib.rs  macros.rs  pool.rs  utils.rs
src/grpc-clients/src/placement/: mod.rs
src/grpc-clients/src/placement/inner/: call.rs  mod.rs
src/grpc-clients/src/placement/kv/: call.rs  mod.rs
src/grpc-clients/src/placement/openraft/: call.rs  mod.rs
src/placement-center/: Cargo.toml
src/placement-center/src/: lib.rs
src/placement-center/src/core/: error.rs
src/placement-center/src/openraft/: error.rs  mod.rs  raft_node.rs  typeconfig.rs
src/placement-center/src/openraft/network/: connection.rs  network.rs
src/placement-center/src/openraft/route/: mod.rs
src/placement-center/src/openraft/store/: log_store.rs  mod.rs  state_machine_store.rs
src/placement-center/src/route/: data.rs  mod.rs
src/placement-center/src/server/: mod.rs
src/placement-center/src/server/grpc/: mod.rs  server.rs  services_kv.rs
src/placement-center/src/server/http/: index.rs  mod.rs  server.rs
src/placement-center/src/storage/: engine.rs  keys.rs  kv.rs  mod.rs  rocksdb.rs
src/protocol/: Cargo.toml  build.rs
src/protocol/src/pb/: common.proto  kv.proto  openraft.proto  placement.proto
src/protocol/src/server/: common.rs  kv.rs  mod.rs  openraft.rs  placement.rs
