[workspace]
members = ["src/placement-center", "src/cmd", "src/protocol", "src/common/base"]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

placement-center = { path = "src/placement-center" }
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }
