[workspace]
members = ["src/placement-center", "src/cmd", "src/protocol", "src/common/base"]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.25"
log4rs = "1.3.0"
serde_yaml = "0.9.34"
toml = "0.8.20"
thiserror = "2.0.11"

placement-center = { path = "src/placement-center" }
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }
