[workspace]
members = [
    "src/placement-center",
    "src/cmd",
    "src/protocol",
    "src/common/base",
    "src/grpc-clients",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.25"
log4rs = "1.3.0"
serde_yaml = "0.9.34"
toml = "0.8.20"
thiserror = "2.0.11"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
dashmap = "6.1.0"
prost = "0.13.5"
rocksdb = "0.23.0"
bincode = "1.3.3"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
    "serde",
    "type-alias",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mobc = "0.8.5"
bytes = { version = "1.10.1", features = ["serde"] }
valico = "4.0.0"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
apache-avro = "0.17.0"

cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }
placement-center = { path = "src/placement-center" }
grpc-clients = { path = "src/grpc-clients" }
