[package]
name = "cmd"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
log4rs = "1.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
toml = "0.8.20"
common-base.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[[bin]]
name = "placement-center"
path = "src/placement-center/server.rs"
