[package]
name = "protocol"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dashmap = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
