[package]
name = "common-base"
version.workspace = true
edition.workspace = true

[dependencies]
rocksdb.workspace = true
log.workspace = true
log4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
tonic.workspace = true
tokio.workspace = true
bincode.workspace = true
axum.workspace = true
prost.workspace = true
valico.workspace = true
apache-avro.workspace = true
